Fix problem with clip-path on safari browser.

--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -13,9 +13,10 @@
         width: 15rem;
         height: 15rem;
         float: left;
-        shape-outside: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
-        transform: translateX(-3rem) skewX(20deg);
+        shape-outside: circle(45%);
+        clip-path: circle(50%);
+        -webkit-clip-path: circle(50%);
+        transform: translateX(-3rem) skewX(20deg) rotate(-10deg);
     }
 
     &__img {
@@ -23,6 +24,7 @@
         transform: translateX(-1rem) scale(1.3);
         backface-visibility: hidden;
         -webkit-backface-visibility: hidden;
+        overflow: hidden;
         transition: all .5s;
     }
 
